Bg color still issue, slidetoggle works better

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,6 @@
   {{title}}
   <span class="spacer"></span>
   <span>
-    Light
-    <mat-slide-toggle (change)="onChangeTheme($event)">Dark</mat-slide-toggle>
+    <mat-slide-toggle (change)="onChangeTheme($event)">{{currentTheme}}</mat-slide-toggle>
   </span>
 </mat-toolbar>
