--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -17,6 +17,7 @@ $GameLibrary-light-accent: mat-palette($mat-orange, A400, A100, A700);
 
 $GameLibrary-dark-primary: mat-palette($mat-blue, 900);
 $GameLibrary-dark-accent: mat-palette($mat-orange, A400, A200, A700);
+$GameLibrary-dark-background: map_get($mat-blue-grey, 100);
 
 // The warn palette is optional (defaults to red).
 $GameLibrary-light-warn: mat-palette($mat-red);
@@ -38,6 +39,11 @@ $GameLibrary-theme-dark: mat-dark-theme((
     warn: $GameLibrary-light-warn,
   )
 ));
+
+//Custom background color
+$background: map-get($GameLibrary-theme-dark, background);
+$background: map_merge($background, (background:$GameLibrary-dark-background));
+$GameLibrary-theme-dark: map_merge($GameLibrary-theme-dark, (background:$background));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
