--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
 <app-header (themeSwitched)="onSwitchedTheme($event)"></app-header>
+<main>
+  <button mat-raised-button color="primary">
+      Does nothing
+  </button>
+</main>
