--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-header (themeSwitched)="onSwitchedTheme($event)"></app-header>
-<main>
-  <button mat-raised-button color="primary">
+<mat-drawer-container>
+  <mat-drawer-content>
+    <button mat-raised-button color="primary">
       Does nothing
-  </button>
-</main>
+    </button>
+  </mat-drawer-content>
+</mat-drawer-container>
