--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-<app-header (themeSwitched)="onSwitchedTheme($event)"></app-header>
-<mat-drawer-container>
-  <mat-drawer-content>
-    <button mat-raised-button color="primary">
-      Does nothing
-    </button>
-  </mat-drawer-content>
-</mat-drawer-container>
+<div fxLayout="column" fxFlexFill>
+  <app-header (themeSwitched)="onSwitchedTheme($event)"></app-header>
+  <mat-drawer-container fxFlex>
+    <mat-drawer-content>
+      <button mat-raised-button color="primary">
+        Does nothing
+      </button>
+    </mat-drawer-content>
+  </mat-drawer-container>
+</div>
