--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,10 @@
 
 html, body {
   height: 100%;
+  box-sizing: border-box;
+  margin: 0;
 }
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
