Stuck, be back after I learn more about angular

--- a/src/app/gamecard/gamecard.component.html
+++ b/src/app/gamecard/gamecard.component.html
@@ -1,5 +1,5 @@
-<div class="gamecard">
+<!-- <div class="gamecard"> -->
   <mat-card>
-      <img src="images/02.png" alt="Charizard">
+      <img src="images/02.png" (click)="onGameClicked()">
   </mat-card>
-</div>
+<!-- </div> -->
