--- a/src/app/gamecard/gamecard.component.css
+++ b/src/app/gamecard/gamecard.component.css
@@ -1,9 +1,11 @@
 .gamecard{
+  display:block;
   height: 100%;
   width: 100%;
 }
 
-.gamecard img{
-  width: 100%;
-  height:100%;
+img{
+   width: 100%;
+  /* height:100%;  */
 }
+
